--- a/style.css
+++ b/style.css
@@ -22,20 +22,143 @@ body {
 
 .logo {
     display: flex;
-    align-items: center;
-    width: 80%;
-    
+    flex-direction: row;
 }
 
+
 h1 {
-    padding-left: 32%;
+    margin-right: 35%;
     color: antiquewhite;
     font-family: 'Zen Old Mincho', serif;
     letter-spacing: 3px;
     text-decoration: underline;
-    padding-right: 100px;
+    
+    width: 40%;
+    
 }
 
 img {
-    width: 10%;
+    width: 20%;
+    margin-left: 65%;
+}
+
+
+
+
+@media screen and  (max-width: 1250px) {
+    
+    h1 {
+        margin-right: 20%;
+        color: antiquewhite;
+        font-family: 'Zen Old Mincho', serif;
+        letter-spacing: 3px;
+        text-decoration: underline;
+        width: 40%;
+        font-size: 2rem;
+    }
+    .logoMontpellier {
+        padding-top: 50px;
+    }
+}
+
+@media screen and  (max-width: 965px) {
+    #plan {
+        width: 600px;
+        height: 400px;
+        border: 5px solid #43cea2;
+        border-radius: 20px;
+    }
+    .placementPlan{
+        width: 70%;
+        height: 100vh;
+        padding-left: 25%;
+        padding-top: 50px;
+    }
+    h1 {
+        margin-right: 20%;
+        color: antiquewhite;
+        font-family: 'Zen Old Mincho', serif;
+        letter-spacing: 3px;
+        text-decoration: underline;
+        width: 40%;
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and  (max-width: 820px) {
+    #plan {
+        width: 500px;
+        height: 300px;
+        border: 5px solid #43cea2;
+        border-radius: 20px;
+        
+    }
+    .placementPlan{
+        width: 70%;
+        height: 100vh;
+        padding-top: 50px;
+    }
+}
+@media screen and  (max-width: 700px) {
+    #plan {
+        width: 400px;
+        height: 300px;
+        border: 5px solid #43cea2;
+        border-radius: 20px;
+        
+    }
+    .placementPlan{
+        width: 70%;
+        height: 100vh;
+        
+        padding-top: 50px;
+    }
+}
+@media screen and  (max-width: 590px) {
+    #plan {
+        width: 300px;
+        height: 300px;
+        border: 5px solid #43cea2;
+        border-radius: 20px;
+        
+    }
+    .placementPlan{
+        width: 70%;
+        height: 100vh;
+        
+        padding-top: 50px;
+    }
+    h1 {
+        margin-right: 20%;
+        color: antiquewhite;
+        font-family: 'Zen Old Mincho', serif;
+        letter-spacing: 3px;
+        text-decoration: underline;
+        width: 40%;
+        font-size: 1rem;
+        }
+}
+@media screen and  (max-width: 430px) {
+    #plan {
+        width: 250px;
+        height: 300px;
+        border: 5px solid #43cea2;
+        border-radius: 20px;
+        
+    }
+    .placementPlan{
+        width: 70%;
+        height: 100vh;
+        
+        padding-top: 50px;
+    }
+    h1 {
+        margin-right: 20%;
+        color: antiquewhite;
+        font-family: 'Zen Old Mincho', serif;
+        letter-spacing: 3px;
+        text-decoration: underline;
+        width: 40%;
+        font-size: 1rem;
+    }
 }
